--- a/问题集（2）.md
+++ b/问题集（2）.md
@@ -1,25 +1,55 @@
+#问题集（2）
 1. 个人主页上的“+”下拉菜单可创建的四种类别分别有？分别的意思？
+new repository:创建新的仓库
+import repository:
+new gist:创建代码片段
+new organization:创建组织
 2. 如何能将仓库中的html文件直接解析成页面？
+在sittings中的github pages设置成master branch然后再点击save，然后打开地址就可以
 3. 如何删除仓库
+在sittings中点击delete this repository
 4. Bash是什么操作系统的命令
+linux
 5. Pwd是什么命令
+打印当前目录
 6. Cd是什么命令
+改变当前目录
 7. Echo是什么命令
+打印信息
 8. 配置git用户名的命令
+git config --global user.name " "
 9. 配置邮箱的命令
+git config --global user.email " "
 10. 命令行换行方式
+用/
 11. 命令行终结方式
+ctrl+c强制退出
 12. 使用命令行比GUI方式有何优势
+方便、功能发挥更好
 13. 提交到本地仓库时为什么有暂存区
+版本跟踪，历史档案，可以控制提交的颗粒度，回退时不至于一所有
 14. 新建代码仓库的命令
+git init
 15. git clone [url] 这个命令的作用是
+将远程仓库克隆到本地
 16. 添加指定文件到暂存区的命令
+git add
 17. 删除工作区文件，并且将这次删除放入暂存区的命令
+git rm
 18. 改名文件，并且将这个改名文件放入暂存区的命令
+git mv
 19. 提交暂存区到仓库的命令
+git commit -m[message 提交的备注]
 20. 直接从工作区提交到仓库的命令
+git commit -a -m[messabe]
 21. 显示变更信息的命令
+git status
 22. 查看历史信息的命令
+git log
+git log --oneline
 23. Commit的意义是
+提交
 24. Pull的意义是
+将远程仓库的提交拉下到本地
 25. Push的意义是
+将本地的提交推送到远程仓库
