添加问题集（1）

--- a/问题集（2）.md
+++ b/问题集（2）.md
@@ -1,3 +1,50 @@
+# Github 问题集（1）
+1. github是什么  
+GitHub就是一个网站https://github.com
+IT技术人员运用的社交网站
+2. git是什么  
+git:版本控制系统，scm/vcs
+3. 学习github的5个理由  
+结交牛人  
+最前沿的技术，每个版本，开发技术，编程技术。。。  
+记录技术发展  
+开源，提高项目经验  
+是一个丰富的学习资料仓库  
+可以用markdown格式展示文档  
+4. github的优势是什么  
+只支持Git格式  
+完整协议支持  
+在线文件编辑  
+社交网络元素  
+特色工作模式  
+私有仓库托管  
+Ruby on Rails  
+5. 通过github年度报告让你记忆最深刻的信息有哪些  
+JavaScript使用量最多
+6. github上有可以个人账号 还可以有（企业  ）账号
+7. github上面的两个组成要素是什么
+人（用户），仓库（项目）  
+8. github上两个重要页面
+个人主页，数字仪表页  
+9. 主页菜单都包含什么
+Overview（概览），Repositories（仓库），Stars，Watch，Followers，Following  
+10. 仓库的心跳线代表什么
+仓库一年是否活跃
+11. star的作用是？
+收藏
+11. fork的作用是？
+克隆操作  
+fork就是clone。  
+只是，这个clone动作在github的服务器上执行而已。  
+如果你需要提交代码，应该使用fork，然后clone到你自己的机器上来。  
+如果不要提交代码，使用从原来的地址clone到本地就好了。  
+可参与到项目里边  
+11. watch的作用是？
+关注项目   
+有动态更新，会提醒（可能是发邮件）
+12. 搜索结果分别有哪些类别
+个人或组织
+13. 你在github上挖到什么宝
 # 问题集（2）
 1. 个人主页上的“+”下拉菜单可创建的四种类别分别有？分别的意思？
 new repository:创建新的仓库
