--- a/问题集.md
+++ b/问题集.md
@@ -100,3 +100,25 @@ git log --oneline
 将远程仓库的提交拉下到本地
 25. Push的意义是
 将本地的提交推送到远程仓库
+# Markdown相关问题整理
+1. MarkDown是什么？
+是一种轻量级语言
+2. MarkDown的特点？
+纯文本内容，兼容所有的文本编辑器与字处理软件  
+可以放到版本管理系统中，追踪历史变更  
+轻松的导出HTML、PDF和本身的.md文件  
+简洁、高效、可读、直观、学习成本低  
+专注你的文字内容儿不是排版样式，安心写作（无字体样式、只有很基础的排版等等）  
+兼容HTML、在线观看、平台支持、排版样式简单
+3. MarkDown的用途？
+IT人士：写日志、技术文稿、记录代码片段、撰写文档  
+研究人员/学生：撰写科技论文、记笔记   
+求职者：制作求职简历  
+其他：撰写博文、在线编辑文章  
+4. MarkDown的编辑工具有哪些？
+百度脑涂、有道云笔记、Github、Gitblog、简书、wordpress  
+Mac OS:MOU  
+Windows:MarkDown Pad,Mark Pad,HBulider...  
+Linuxx:Retex  
+在线：markable.in
+5. MarkDown的区块元素和区段元素分别包含哪些？
